--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,11 +9,17 @@ body{
     text-decoration: none;
 
 }
-.about, .school, .exposure, .projects,.extras,.contact{
+.nav{
+    background-color: gray;
+}
+.about, .school, .exposure, .projects,.other,.extras,.contact{
     background-color: #FFC55A;
     color: black
 }
 .index:active{
     background-color: black;
     color: white
+}
+.container{
+    background-color: #00215E;
 }
