--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,11 +13,11 @@ nav{
 .about, .school, .exposure, 
 .projects, .other, .extras, .contact{
     background-color: #FFC55A;
-    color: black
+    color: black;
 }
 .index:active{
     background-color: black;
-    color: white
+    color: white;
 }
 .container{
     background-color: #00215E;
