--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,3 +1,36 @@
-.guyzers{
-    
+#contacts{
+    justify-content: space-around;
+    display: flex;
+    margin: auto;
+}
+#contact> a > img{
+    margin: auto;
+    justify-content: center;
+    display: flex;
+}
+@media only screen and (max-width: 600px) {
+  body {
+    display: grid;
+    grid-template-areas: 
+    "nav"
+    "main"
+    "footer";
+  }
+  nav{
+    grid-area: nav;
+  }
+  main{
+    grid-area: main;
+  }
+  footer{
+    grid-area:footer;
+  }
+  #contacts{
+    display:flex;
+    flex-direction: column;
+  }
+  #contacts>a
+  {
+    padding: 50px;
+  }
 }
