--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -153,7 +153,15 @@ footer{
     margin: 0 auto;
     padding: 0 10px;
 }  
-  
+/* Header */
+header {
+    border-bottom: 1px solid var(--darkGray);
+}
+header h1 {
+    text-align: center;
+    color: var(--lightGray);
+    margin: 10px 0 10px;
+}  
 /* Gameboard */
 .gameboard {
     width: 350px;
