--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -7,6 +7,8 @@
     margin: auto;
     justify-content: center;
     display: flex;
+    max-width: 100px;
+    max-height: 100px;
 }
 @media only screen and (max-width: 600px) {
   body {
