--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -246,4 +246,42 @@ header h1 {
     border: none;
     background-color: var(--green);
 }
-  
+/*Contact*/
+#contacts{
+    justify-content: space-around;
+    display: flex;
+    margin: auto;
+}
+#contact> a > img{
+    margin: auto;
+    justify-content: center;
+    display: flex;
+    max-width: 100px;
+    max-height: 100px;
+}
+@media only screen and (max-width: 600px) {
+  body {
+    display: grid;
+    grid-template-areas: 
+    "nav"
+    "main"
+    "footer";
+  }
+  nav{
+    grid-area: nav;
+  }
+  main{
+    grid-area: main;
+  }
+  footer{
+    grid-area:footer;
+  }
+  #contacts{
+    display:flex;
+    flex-direction: column;
+  }
+  #contacts>a
+  {
+    padding: 50px;
+  }
+}
