--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,12 +1,10 @@
 
-@font-face{
-    font-family: 'Julius Sans One';
-    src:  local('Julius Sans One'), local('JuliusSansOne-Regular'), url(http://themes.googleusercontent.com/static/fonts/juliussansone/v1/iU65JP9acQHPDLkdalCF7u921tOcMok2fHawGmtxikA.ttf) format('truetype');
-}
+@font-face { 
+    font-family: 'Julius Sans One'; 
+    src: url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap'); }
 *{
     box-sizing: border-box;
     font-family: 'Julius Sans One';
-    src:  local('Julius Sans One'), local('JuliusSansOne-Regular'), url(http://themes.googleusercontent.com/static/fonts/juliussansone/v1/iU65JP9acQHPDLkdalCF7u921tOcMok2fHawGmtxikA.ttf) format('truetype');    
 }
 /* 
 body{
