--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,7 @@
 
 @font-face { 
     font-family: 'Julius Sans One'; 
-    src: url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap'); }
+    src: url(https://fonts.gstatic.com/s/juliussansone/v19/1Pt2g8TAX_SGgBGUi0tGOYEga5WOzHsX2aE.woff2) format('woff2'); }
 *{
     box-sizing: border-box;
     font-family: 'Julius Sans One';
