--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
-@font-face { 
-    font-family: 'Julius Sans One'; 
-    src: url(https://fonts.gstatic.com/s/juliussansone/v19/1Pt2g8TAX_SGgBGUi0tGOYEga5WOzHsX2aE.woff2) format('woff2'); }
 *{
     box-sizing: border-box;
-    font-family: 'Julius Sans One';
+    font-family:'Julius Sans One', sans-serif;
 }
 
 body{
