--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
+:root{
+    --background-color: #043940;
+    --text-color: #e9ce3e;
+    --text-color-two: #9a8d3e;
+    --text-color-three: #b2294e;
+
+}
 *{
     box-sizing: border-box;
     font-family:'Julius Sans One', sans-serif;
@@ -7,39 +14,39 @@
 }
 
 body{
-    background-color: #BE5B50;
+    background-color: var(--background-color);
     text-align: center;
-    color: white;
+    color: var(--text-color);
 }
 
 nav{
     margin: auto;
-    background-color: #8A2D3B;
+    background-color: whitesmoke;
     border-bottom: white solid 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     max-width: 80%;
     padding: 10px;
-    color: white;
+    color: var(--text-color);
 }
 a:link {
-  color: red;
+  color: var(--text-color);
 }
 
 /* visited link */
 a:visited {
-  color: green;
+  color: var(--text-color-three);
 }
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: var(--text-color-two);
 }
 
 /* selected link */
 a:active {
-  color: blue;
+  color: black;
 }
 
 /* 
