--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -143,7 +143,14 @@ footer, nav, .name{
 .job > .duration{
     font-style: italic;
 }
-
+#contacts > a >img{
+    max-width: 100px;
+    max-height: 100px;
+}
+#contacts{
+    display: flex;
+    justify-content: space-evenly;
+}
 /* 
 #name{
     font-size: 30px;
