--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,4 +1,3 @@
-
 #button-holders{
     display: grid;
     grid-template-areas:
@@ -13,27 +12,41 @@
 }
 #two{
   grid-area: two;
-}#three{
+}
+#three{
   grid-area:three;
-}#four{
+}
+#plus{
+  grid-area: plus;
+}
+#four{
   grid-area: four;
-}#five{
+}
+#five{
   grid-area: five;
-}#six{
+}
+#six{
   grid-area: six;
-}#seven{
+}
+#minus{
+  grid-area: minus;
+}
+#seven{
   grid-area: seven;
-}#eight{
+}
+#eight{
   grid-area: eight;
-}#nine{
+}
+#nine{
   grid-area: nine;
-}#mulitply{
+}
+#mulitply{
   grid-area: mulitply;
-}#zero{
+}
+#zero{
   grid-area: zero;
-}#one{
-  grid-area: one;
-}#equals{
+}
+#equals{
   grid-area: equals;
 }
 /*
