--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -4,7 +4,7 @@
     "one two three plus"
     "four five six minus"
     "seven eight nine mulitply"
-    "zero equals";
+    "zero divide equals ";
 
 }
 #one{
