--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -4,7 +4,7 @@ div#button-holders{
   "one two three plus"
   "four five six minus"
   "seven eight nine mulitply"
-  "zeronum divide equals equals";
+  "zeronum equals equals divide ";
 
 }
 button#one{
