--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -38,13 +38,21 @@ nav{
     color: var(--text-color);
 
 }
-<<<<<<< HEAD
-a.link{
-    color: red;
+a:link {
+  color: var(--text-color);
 }
-=======
->>>>>>> 62e380317e26328befeabfb3cf4ebca93f27a477
 
+a:visited {
+  color: var(--text-color-three);
+}
+
+a:hover, a.link:hover  {
+  color: var(--text-color-two);
+}
+
+a:active {
+  color: black;
+}
 a.link:link {
   color: var(--text-color-two);
 }
