--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,7 +75,6 @@ body{
     background-color: var(--background-color);
     text-align: center;
     color: black;
-    max-width: 80%;
     font-family: "Times New Roman", Times, serif;
 }
 
@@ -86,6 +85,7 @@ main{
     text-align: left;
     font-family: 'Times New Roman', sans-serif, Times;
     font-size: 20px;
+     padding:20px;
 }
 
 h2, h3{
@@ -98,6 +98,14 @@ h2, h3{
     flex-direction: row;
     justify-content: center;
     padding: 10px;
+}
+.note{
+    background-color:white;
+    max-width:50%;
+    max-height:50%;
+}
+.text{
+    color: black;
 }
 button{
     padding: 5px;
@@ -151,6 +159,7 @@ footer, nav, .name{
     display: flex;
     justify-content: space-evenly;
 }
+
 /* 
 @media screen and (min-width: 480px) {
     body {
